feat: seo & favico

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="A simple weather app that allows you to search for the weather in a specific location or get the weather for your current location." />
+    <meta name="keywords" content="weather, app, react, open-meteo, api" />
+    <meta name="author" content="Larry Xue" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <title>Weather App</title>
   </head>
   <body>
     <div id="root"></div>
