--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Larry Xue" />
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <title>Weather App</title>
   </head>
   <body>
